css/default_ie.css
/* ... */
p {
    text-align: left;
}

img {
    vertical-align: middle;
    border: none;
}

textarea {
    width: 100%;
}

table {
    width: 100%;
    border-collapse: collapse;
}

/* specific div elements */

.ui-dialog-titlebar {
  background-color: #62B0F9;
  background-image: none;
  color: #FFFFFF;
}

.intro {
    font-size: 16px;
    padding-top: 15px;
    border-top-style: dotted;
    border-top-width: 1px;
    padding-bottom: 15px;
    border-bottom-style: dotted;
    border-bottom-width: 1px;
    line-height: 1.5;
}

#basket {
    width: 800px;
    border: #ccc 2px solid;
    margin: 0px auto 0px auto;
}

#title {
    position: relative;
    height: 86px;
    background: url("../images/title_bkg.png") repeat-x top left;
    padding-left: 180px;
    border: #fff 2px solid;
    color:  #585858;
}

#logo {
    position: absolute;
    top: 0px;
    left: 0px;
    width: 186px;
    height: 86px;
    background: url("../images/logo.png") no-repeat top left;
}

#stats {
    height: 250px;
    margin-top: 10px;
    margin-bottom: 10px;
    margin-left: auto;
    margin-right: auto;
    width: 50%;
}

#statschart {
    width: 800px;
    height: 400px;
    margin: 16px 0px 10px 0px;
    border-top: #ccc 1px dotted;
}

#statstable {
    font-weight: normal;
    font-size: 0.7em;
    margin-left: 50px;
    margin-right: 50px;
    border-top: #ccc 1px dotted;
}

#statstable h3 {
    color: rgb(62,87,111);
    font-family: ubuntu_font;
    font-weight: normal;
    font-size: 16px;
}

#statstable table {
    margin-bottom: 20px;
}

#statstable table th {
    text-align: center;
    font-weight: bold;
    background-color: #eee;
}

.clear { clear: both;}

#nav {
    color: #888;
    font-size: 12px;
    font-weight: bold;
    border-top: #ccc 2px solid;
    border-bottom: #ccc 2px solid;
}

#navright {
    text-align: right;
    float: right;
}

#navleft {
    text-align: left;
    float: left;
}

#nav ul {
    list-style-type: none;
    padding: 2px 0px 4px 6px;
    margin: 0px;
}

#nav li {
    display: inline;
    padding-right: 10px;
}

#nav a {
    font-weight: bold;
    color: #000;
}

.requirements {
    text-align: center;
    background: #4988DE;
    color: white;
}

#controls {
    text-align: center;
    border-top: #ccc 1px dotted;
    margin-top: 30px;
    width: 100%;
}

#welcome {
    float: left;
    width: 480px;
    text-align: left;
    border-right-style: dotted;
    border-right-width: 1px;
    margin: 0px 0px 0px 0px;
    padding: 0px 15px 0px 15px;
}

#welcome h3 {
  background-color: #eee;
  font-size: 16px;
  height: 40px;
  font-weight: bold;
  text-align: center;
}

#welcome h2 {
  font-size: 20px;
  margin-top: 15px;
}

#welcome h4 {
    font-size: 12px;
    font-weight: bold;
    text-align: justify;
}

#welcome p {
    text-align: justify;
}

#content {
    float: left;
    width: 480px;
    text-align: left;
    border-right-style: dotted;
    border-right-width: 1px;
    margin: 0px 0px 0px 0px;
    padding: 15px 15px 5px 15px;
}

#content h3 {
  background-color: #eee;
  font-size: 16px;
  height: 40px;
  font-weight: bold;
  text-align: center;
}

#content h2 {
  background-color: #eee;
  font-size: 16px;
  height: 18px;
  font-weight: bold;
  text-align: center;
}

#content h4 {
    font-size: 12px;
    font-weight: bold;
    text-align: justify;
}

#content p {
    text-align: justify;
}

#content_disabled {
  float: left;
  width: 480px;
  text-align: left;
  border-right-style: dotted;
  border-right-width: 1px;
  margin: 0px 0px 0px 0px;
  padding: 0px 15px 0px 15px;
}

#content_disabled h3 {
  background-color: #eee;
  color: grey;
  font-size: 16px;
  height: 40px;
  font-weight: bold;
  text-align: center;
}

#content_disabled h2 {
  background-color: #eee;
  color: grey;
  font-size: 16px;
  height: 18px;
  font-weight: bold;
  text-align: center;
}

#content_disabled h4 {
  color: grey;
  font-size: 12px;
  font-weight: bold;
  text-align: justify;
}

#content_disabled p {
    text-align: justify;
}

#separator {
  width: 1500px;
  border-width: 1px;
  border-style: solid;
  border-color: #CCCCCC;
  margin: 20px 0px 20px 0px;
}

#logos {
  font-size: 70%;
  text-align: center;
}

#logos table {
  border: 0px;
  width: 480px;  
}

#logos table.firstRow {
  margin: 20px 0px 30px 0px;
}

#logos table.secondRow {
  margin: 20px 0px 30px 0px;
}

#logos table tr.caption {
  vertical-align: top;
    text-align: center;
}

#logos table td.epfl {
  height: 60px;
  width: 160px;
  cursor: pointer;
  background: url("../images/logo_epfl.png") no-repeat center;
  background-size: 90px;
}

#logos table td.mri {
  height: 60px;
  width: 160px;
  cursor: pointer;
  background: url("../images/logo_mri.png") no-repeat center;
  background-size: 60px;
}

#logos table td.svi {
  height: 60px;   
  width: 160px;
  cursor: pointer;
  background: url("../images/logo_svi.png") no-repeat center;
  background-size: 60px;
}

#logos table td.bsse {
  height: 80px;
  width: 200px;
  margin-top: 50px;
  padding-bottom: 5px;
  cursor: pointer;
  background: url("../images/logo_bsse.png") no-repeat center;
  background-size: 100px;
}

#logos table td.fmi {
  height: 80px;
  width: 200px;
  cursor: pointer;
  background: url("../images/logo_fmi.png") no-repeat center;
  background-size: 70px;
}

#logos table td.bio-basel {
  height: 80px;
  width: 240px;
  cursor: pointer;
  background: url("../images/logo_bio_basel.png") no-repeat center;
  background-size: 90px;
}

#logos table td.blank {
  width: 40px;
}

#templates select {
    width: 100%;
    /* "resize" is not supported by IE up to (at least) version 10, however
    we still keep it here and pray for the future. */
    resize: both;
}

#userfiles select {
    width: 100%;
    text-align: left;
    /* "resize" is not supported by IE up to (at least) version 10, however
    we still keep it here and pray for the future. */
    resize: both;
}

#selection {
    font-size: 0.8em;
    text-align: center;
}
/* ... */

